--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -24,7 +24,7 @@ status-website:
   navbar:
     - title: Status
       href: /
-    - title: GitHub
+    - title: GitHubRepo
       href: https://github.com/$OWNER/$REPO
 
 # Upptime also supports notifications, assigning issues, and more
