--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,7 +10,7 @@ sites:
   - name: RTR2-LON (1&1 VPS)
     url: rtr2-lon.n.willwilson.uk
     check: "tcp-ping"
-    ipv6: true
+    port: 8291
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -20,11 +20,11 @@ status-website:
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introMessage:
   navbar:
     - title: Status
       href: /
-    - title: GitHubRepo
+    - title: GitHub
       href: https://github.com/$OWNER/$REPO
 
 # Upptime also supports notifications, assigning issues, and more
