--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -18,14 +18,17 @@ status-website:
   cname: status.willwilson.uk
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage:
+  name: Will Wilson Status
+  introTitle: "Will Wilson (AS214818) Service Status"
+  introMessage: Service status is updated approximately every 5-30 minutes. Charts are updated less frequently. Subscribe to updates by watching all repo activity on GitHub - https://github.com/thewillwilson/upptime
+  theme: light
   navbar:
-    - title: Status
-      href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+    - title: Email NOC
+      href: mailto:noc@willwilson.uk
+    - title: Email Abuse
+      href: mailto:abuse@willwilson.uk
+    - title: Email Peering
+      href: mailto:peering@willwilson.uk
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
