--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -32,4 +32,4 @@ status-website:
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
 i18n:
-  footer: <a href="https://willwilson.uk>willwilson.uk</a>
+  footer: "<a href='https://willwilson.uk'>willwilson.uk</a>"
